# solana-bundle-bots

./: .env.example  README.md
app/src/: bundle-manager.ts  server.ts  wallet-manager.ts
app/src/strategies/: arbitrage-detector.ts  copy-trading.ts  mev-protection.ts
app/src/utils/: dex-utils.ts
docs/: ADVANCED_STRATEGIES.md  GETTING_STARTED.md
programs/bundle-manager/: Cargo.toml
programs/bundle-manager/src/: lib.rs
scripts/: deploy-program.ts  setup-wallets.ts
